Fix production CORS configuration for Vercel frontend